2006-08-09  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/qp.c (mthca_tavor_post_send, mthca_arbel_post_send): Fence
	bit must be set in both doorbell and WQE.

2006-08-03  Jack Morgenstein  <jackm@mellanox.co.il>

	* src/mthca.h: Include <stddef.h> to get definition of offsetof().

2006-08-03  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/verbs.c (mthca_create_srq): Limit SRQ max_wr to avoid
	integer overflow.

2006-07-26  Roland Dreier  <rdreier@cisco.com>

	* src/mthca.h, src/ah.c, src/cq.c, src/memfree.c, src/qp.c,
	src/srq.c, src/verbs.c: Convert internal allocations for AH pages
	(for non-memfree HCAs), CQ buffers, doorbell pages (for memfree
	HCAs), QP buffers and SRQ buffers to use the new buffer
	allocator.  This makes libmthca fork()-clean when built against
	libibverbs 1.1.

	* src/buf.c (mthca_alloc_buf, mthca_free_buf): Add new functions
	to wrap up allocating page-aligned buffers.  The new functions
	will call ibv_dontfork_range()/ibv_dofork_range() to do proper
	madvise()ing to handle fork(), if applicable.

	* configure.in: Check for ibv_dontfork_range() and ibv_dontfork_range().

2006-07-04  Dotan Barak  <dotanb@mellanox.co.il>

	* src/verbs.c (mthca_create_cq, mthca_resize_cq): Passing huge
	size values to create_cq/resize_cq causes a hang in
	align_cq_size().  Fix this by validating input, similiar to what
	we do for mthca_create_qp() and mthca_create_srq().

2006-06-13  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0.2.

2006-06-13  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/cq.c (mthca_poll_one): Add workaround for MemFree FW bug
	that causes wrong WQE addr to be reported.

2006-05-24  Roland Dreier  <rdreier@cisco.com>

	* src/mthca.c: If <sysfs/libsysfs.h> is detected, include it
	explicitly.  This lets things build when sysfs headers are
	installed on the build system even when building against
	libibverbs 1.1 (which does not include sysfs headers implicitly).
