@@ -297,7 +297,15 @@ int mthca_resize_cq(struct ibv_cq *ibcq, int cqe)
 	old_cqe = ibcq->cqe;
 
 	cmd.lkey = mr->lkey;
+#ifdef IBV_CMD_RESIZE_CQ_HAS_RESP_PARAMS
+	{
+		struct ibv_resize_cq_resp resp;
+		ret = ibv_cmd_resize_cq(ibcq, cqe - 1, &cmd.ibv_cmd, sizeof cmd,
+					&resp, sizeof resp);
+	}
+#else
 	ret = ibv_cmd_resize_cq(ibcq, cqe - 1, &cmd.ibv_cmd, sizeof cmd);
+#endif
 	if (ret) {
 		mthca_dereg_mr(mr);
 		mthca_free_buf(&buf);
