@@ -1,3 +1,9 @@
+2006-08-23  Roland Dreier  <rdreier@cisco.com>
+
+	* src/verbs.c (mthca_resize_cq): Add a test for
+	IBV_CMD_RESIZE_CQ_HAS_RESP_PARAMS to make libmthca work with newer
+	libibverbs libraries that add two parameters to ibv_cmd_resize_cq().
+
 2006-08-09  Michael S. Tsirkin  <mst@mellanox.co.il>
 
 	* src/qp.c (mthca_tavor_post_send, mthca_arbel_post_send): Fence
